# smith

./: .gitignore  CLAUDE.md  README.md  TODO.md  skills-lock.json
.playwright-cli/: page-2026-07-10T03-50-16-814Z.yml  page-2026-07-10T03-50-49-286Z.yml
agents/: output_style.md
app/: Package.swift
common/: config.py  config_loader.py  database.py  filesystem.py  log.py  paths.py  pyproject.toml  yaml_utils.py
docs/: 01-产品设计.md  01-产品设计与定位.md  (+35 more)
engine/: .coverage  hook.py  identity_catalog.py  pyproject.toml  react_budget.py  snapshot.py
engine/context/: __init__.py  assembler.py  compression.py
engine/execution/: agent_loop.py  backtrack.py  compression.py  events.py  gate.py  legacy.py  memory_maintenance.py  pipeline.py  pipeline_context.py  react_loop.py  run_state.py  run_stream.py  runtime.py  runtime_control.py  session_state.py  skill_chain.py  smith_ui.py  task_router.py  tool_ledger.py  trace.py
engine/llm/: __init__.py  client.py  contracts.py  events.py  factory.py  model_config.py  observability.py  port.py  usage.py
engine/llm/adapters/: __init__.py  _http.py  _retry.py  anthropic.py  base.py  gemini.py  openai.py  openai_compatible.py
engine/mcp/: client.py  config.py  session_pool.py
engine/memory/: MEMORY_POLICY.md  __init__.py  _files.py  _review.py  compile.py  dream.py  history.py  interface.py  policy.py  search.py  store.py  user_learner.py
engine/observability/: __init__.py  diagnosis.py  events.py  health.py  incidents.py  projections.py  proposals.py  reader.py  recorder.py  runtime.py  summary_store.py  trace_store.py
engine/plugin/: __init__.py  loader.py  registry.py  trigger.py
engine/prompt/: __init__.py  assembler.py  placeholder.py
engine/safety/: approval.py  eval_guard.py  fact_gate.py  tool_guard.py  tool_policy.py
engine/sandbox/: __init__.py  host.py  macos_seatbelt.py
engine/skill/: executor.py  loader.py  registry.py  settings.py  store.py
engine/tests/: test_agent_stream_checkpoint.py  test_approval.py  test_compression.py  test_execution_environment.py  test_fact_gate.py  test_gates.py  test_hook.py  test_identity_catalog.py  test_llm_adapters.py  test_llm_client.py  test_llm_client_generation.py  test_llm_generation_observability.py  test_llm_usage.py  test_mcp_client.py  test_mcp_session_pool.py  test_memory_files.py  test_memory_maintenance.py  test_memory_pipeline.py  test_memory_policy.py  test_observability.py  test_pdf_tools.py  test_pipeline_termination.py  test_price_table.py  test_prompt_assembler.py  test_react_approval.py  test_react_budget.py  test_run_state.py  test_runtime_contract.py  test_runtime_control.py  test_sandbox.py  test_session_state_security.py  test_shell_safety.py  test_skill_chain.py  test_skill_loader.py  test_skill_settings.py  test_skill_store_security.py  test_smith_ui.py  test_snapshot.py  test_task_router.py  test_tool_design_fixes.py  (+5 more)
engine/tool/: environment.py  interface.py  mcp_client.py  registry.py  schema.py  truncation.py
server/: pyproject.toml
server/app/: agent_runtime.py  cli.py  cli_agents.py  cli_chat.py  cli_commands.py  cli_format.py  cli_identity.py  cli_shell.py  cli_smith.py  config.py  db.py  employee_fs.py  main.py
server/app/domain/: auth.py  auto_task.py  employee.py  session.py  skill.py  task.py
server/app/infrastructure/: auth.py  database.py  profile_files.py  schema.py
server/app/infrastructure/repositories/: agent_profile_repo.py  auto_task_repo.py  employee_repo.py  session_repo.py  task_repo.py  team_repo.py
server/app/models/: employee.py  session.py  task.py
server/app/routers/: agent.py  auth.py  auto_tasks.py  config.py  employees.py  files.py  plugins.py  sessions.py  skills.py  stats.py  tasks.py  teams.py  templates.py
server/app/schemas/: agent_profile.py  auto_task.py  mcp.py  observability.py  project_instruction.py  run.py  session.py  skill.py  task.py  team.py  token_stats.py
server/app/services/: agent_profile_service.py  agent_service.py  auto_task_service.py  config_service.py  employee_service.py  engine_runtime.py  mcp_service.py  observability_service.py  plugin_service.py  profile_file_service.py  project_instruction_service.py  run_state_service.py  scheduler.py  session_service.py  skill_service.py  stats_service.py  task_service.py  team_service.py  template_service.py  token_stats_service.py
server/app/templates/: roles.py
server/app/utils/: cron.py
server/docs/: agent-product-research.md
server/openai-agent-mvp/: main.py  pyproject.toml
server/tests/: test_agent_profile_service.py  test_agent_router.py  test_agent_service.py  test_auth.py  test_auto_task_repo.py  test_auto_task_service.py  test_cli.py  test_common_infrastructure.py  test_config_loader.py  test_config_service.py  test_generation_stats.py  test_mcp_service.py  test_observability_service.py  test_profile_files.py  test_project_instruction_service.py  test_run_service.py  test_scheduler.py  test_schema_identity.py  test_session_service.py  test_skill_service.py  test_template_service.py  test_token_stats_service.py
(+280 files in other folders)
