[project]
name = "agent-smith-common"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0", "aiosqlite>=0.21"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common"]

[tool.setuptools.package-dir]
common = "."
