[project]
name = "agent-smith-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.28", "pyyaml>=6.0", "aiosqlite>=0.21", "sqlite-vec>=0.1.6"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "engine",
    "engine.execution",
    "engine.llm",
    "engine.memory",
    "engine.plugin",
    "engine.prompt",
    "engine.safety",
    "engine.skill",
    "engine.tool",
]

[tool.setuptools.package-dir]
engine = "."
