[project]
name = "agent-smith-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "pyyaml>=6.0",
    "aiosqlite>=0.21",
    "pypdf>=6.0",
    "pdfplumber>=0.11",
    "agent-smith-common",
]

[tool.uv.sources]
agent-smith-common = { path = "../common", editable = true }

[project.optional-dependencies]
test = ["pytest>=8.0"]
browser = ["playwright>=1.50"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "engine",
    "engine.execution",
    "engine.observability",
    "engine.llm",
    "engine.llm.adapters",
    "engine.mcp",
    "engine.memory",
    "engine.prompt",
    "engine.safety",
    "engine.skill",
    "engine.tool",
]

[tool.setuptools.package-dir]
engine = "."

[tool.setuptools.package-data]
"engine.memory" = ["MEMORY_POLICY.md"]
