[project]
name = "agent-smith-server"
version = "0.2.0"
description = "Agent-Smith local execution agent CLI and server"
requires-python = ">=3.11"
dependencies = [
    "agent-smith-common",
    "agent-smith-engine",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.21",
    "pyyaml>=6.0",
    "pydantic[email]>=2.10",
    "sse-starlette>=2.2",
    "packaging>=26.2",
    "tiktoken>=0.13.0",
]

[tool.uv.sources]
agent-smith-common = { path = "../common", editable = true }
agent-smith-engine = { path = "../engine", editable = true }

[project.scripts]
smith = "app.cli:main"

[project.optional-dependencies]
dev = ["httpx>=0.28", "pytest>=8.0", "pytest-asyncio>=0.25"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
